Initial model training files

--- a/data-acquisition-and-preprocessing/data_preprocessing.ipynb
+++ b/data-acquisition-and-preprocessing/data_preprocessing.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "This file processes the provided data `tweets.csv`. It is downloaded from https://dataverse.harvard.edu/dataset.xhtml?id=3047332."
-   ],
    "metadata": {
     "id": "UO_e4YzCIIY6"
-   }
+   },
+   "source": [
+    "This file processes the provided data `tweets.csv`. It is downloaded from https://dataverse.harvard.edu/dataset.xhtml?id=3047332."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {
+    "id": "xiPnFLl_HFQ1"
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -20,22 +24,16 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "from transformers import AutoModel, AutoTokenizer"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "xiPnFLl_HFQ1"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "tweets_df = pd.read_csv(\"data/tweets.csv\")\n",
-    "tweets_df"
-   ],
+   "execution_count": 2,
+   "metadata": {
+    "id": "8Ua_dRmRB0yk"
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -260,113 +258,182 @@
        "[52542 rows x 10 columns]"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "tweets_df = pd.read_csv(\"data/tweets.csv\")\n",
+    "tweets_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
-    "id": "8Ua_dRmRB0yk"
-   }
+    "id": "tr6k3V66CMoB"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9736025542ed49399c14fb6fb404df1f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/558 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8adbd72c7212481790da174ec86d7807",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/843k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c6de1c837d944e7496b023ac0341346f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.08M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(\"vinai/bertweet-base\", use_fast=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets = list(tweets_df['content'][:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "id": "oydhAntrCOp9"
+   },
+   "outputs": [],
+   "source": [
+    "inputs = tokenizer(tweets, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "labels = torch.tensor(len(tweets_df['author'][:100])).unsqueeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "id": "EaNr0kGpHCJD"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9afe265434d14705b4118f883bc6cf2f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/543M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at vinai/bertweet-base were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.decoder.bias', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.bias']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "bertweet = AutoModel.from_pretrained(\"vinai/bertweet-base\")\n",
+    "# input_ids = torch.tensor([tokenizer.encode(tweets[0])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "Xtkg8GoVItm0"
+   },
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    features = bertweet(inputs.input_ids)  # Models outputs are now tuples"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"vinai/bertweet-base\", use_fast=False)"
-   ],
+   "metadata": {
+    "id": "A8-8vjgmMEo2"
+   },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "emoji is not installed, thus not converting emoticons or emojis into text. Please install emoji: pip3 install emoji\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embedding are fine-tuned or trained.\n"
-     ]
-    }
-   ],
-   "metadata": {
-    "id": "tr6k3V66CMoB"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "source": [
-    "tweets = list(tweets_df['content'][:100])"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "source": [
-    "inputs = tokenizer(tweets, return_tensors=\"pt\", padding=True, truncation=True)\n",
-    "labels = torch.tensor(len(tweets_df['author'][:100])).unsqueeze(0)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "oydhAntrCOp9"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "source": [
-    "bertweet = AutoModel.from_pretrained(\"vinai/bertweet-base\")\n",
-    "# input_ids = torch.tensor([tokenizer.encode(tweets[0])])"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "EaNr0kGpHCJD"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "with torch.no_grad():\n",
-    "    features = bertweet(inputs.input_ids)  # Models outputs are now tuples"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "Xtkg8GoVItm0"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "source": [
-    "features.pooler_output.shape"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "torch.Size([100, 768])"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {
-    "id": "A8-8vjgmMEo2"
-   }
+   "source": [
+    "features.pooler_output.shape"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Create Dataset and DataLoader"
-   ],
    "metadata": {
     "id": "VHDni4DiS1iT"
-   }
+   },
+   "source": [
+    "## Create Dataset and DataLoader"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class TweetDataset(Dataset):\n",
     "    def __init__(self, df, size=100):\n",
@@ -393,56 +460,55 @@
     "        y = self.labels[idx]\n",
     "        \n",
     "        return x, y"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "source": [
-    "ds = TweetDataset(tweets_df, size=10)"
-   ],
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
-      "emoji is not installed, thus not converting emoticons or emojis into text. Please install emoji: pip3 install emoji\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embedding are fine-tuned or trained.\n"
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "Some weights of the model checkpoint at vinai/bertweet-base were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.decoder.bias', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.bias']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "ds = TweetDataset(tweets_df, size=10)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ds[0][0].shape[0] == 768\n",
     "ds[0][1].shape[0] == 20"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-15481da3cb51>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m768\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
@@ -454,7 +520,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -468,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
