--- a/model-training/train_transformer.ipynb
+++ b/model-training/train_transformer.ipynb
@@ -700,20 +700,7 @@
      "text": [
       "Collecting tensorboardx\n",
       "  Downloading tensorboardX-2.4-py2.py3-none-any.whl (124 kB)\n",
-      "\u001b[?25l\r",
-      "\u001b[K     |██▋                             | 10 kB 23.0 MB/s eta 0:00:01\r",
-      "\u001b[K     |█████▎                          | 20 kB 29.8 MB/s eta 0:00:01\r",
-      "\u001b[K     |████████                        | 30 kB 14.9 MB/s eta 0:00:01\r",
-      "\u001b[K     |██████████▌                     | 40 kB 10.8 MB/s eta 0:00:01\r",
-      "\u001b[K     |█████████████▏                  | 51 kB 5.8 MB/s eta 0:00:01\r",
-      "\u001b[K     |███████████████▉                | 61 kB 5.9 MB/s eta 0:00:01\r",
-      "\u001b[K     |██████████████████▍             | 71 kB 5.6 MB/s eta 0:00:01\r",
-      "\u001b[K     |█████████████████████           | 81 kB 6.3 MB/s eta 0:00:01\r",
-      "\u001b[K     |███████████████████████▊        | 92 kB 6.0 MB/s eta 0:00:01\r",
-      "\u001b[K     |██████████████████████████▎     | 102 kB 5.5 MB/s eta 0:00:01\r",
-      "\u001b[K     |█████████████████████████████   | 112 kB 5.5 MB/s eta 0:00:01\r",
-      "\u001b[K     |███████████████████████████████▋| 122 kB 5.5 MB/s eta 0:00:01\r",
-      "\u001b[K     |████████████████████████████████| 124 kB 5.5 MB/s \n",
+      "\u001b[K     |████████████████████████████████| 124 kB 5.5 MB/s eta 0:00:01\n",
       "\u001b[?25hRequirement already satisfied: protobuf>=3.8.0 in /usr/local/lib/python3.7/dist-packages (from tensorboardx) (3.17.3)\n",
       "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from tensorboardx) (1.19.5)\n",
       "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.8.0->tensorboardx) (1.15.0)\n",
@@ -1139,7 +1126,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1153,7 +1140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -3555,5 +3542,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
