image preprocessing strategies with very basic model

--- a/tensorflow_play/tf_guide/english_spanish_translator.ipynb
+++ b/tensorflow_play/tf_guide/english_spanish_translator.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7c9f4706",
+   "id": "5812a8a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "77d7c533",
+   "id": "f8adfe80",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0f04b15d",
+   "id": "6f7681bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e704c165",
+   "id": "31101352",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7964a9c1",
+   "id": "486054d5",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0195a274",
+   "id": "77df9949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4b2f15fb",
+   "id": "376229c7",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "50dad52f",
+   "id": "6b391966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e6c2980b",
+   "id": "e6c9ca76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d4afdd14",
+   "id": "f14c1474",
    "metadata": {},
    "outputs": [
     {
@@ -413,10 +413,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "2903a7d5",
+   "execution_count": 43,
+   "id": "3cd8fd98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's nothing special.\n",
+      "[start] no es nada de nada [end]\n",
+      "Do you want to eat?\n",
+      "[start] quieres quieres hacer [end]\n",
+      "Don't judge a man by the clothes he wears.\n",
+      "[start] no le [UNK] un hombre de la hombre de la [UNK] [end]\n",
+      "I don't regret it.\n",
+      "[start] no te he [UNK] [end]\n",
+      "I wrote the song for her.\n",
+      "[start] le he libro la carta [end]\n",
+      "Tom bought flowers.\n",
+      "[start] tom le compró muchos años [end]\n",
+      "Say hello to your friends.\n",
+      "[start] nada de tu amigo [end]\n",
+      "You're picky, aren't you?\n",
+      "[start] estás seguro de que te estás [end]\n",
+      "They ignored me.\n",
+      "[start] me ellos me ellos [end]\n",
+      "I cannot even boil water, much less roast a turkey.\n",
+      "[start] no sé que me gusta un poco de café [end]\n",
+      "I invited my friends to dinner.\n",
+      "[start] le he visto a mis padres [end]\n",
+      "Hurry home.\n",
+      "[start] [UNK] a casa [end]\n",
+      "What was the cause of the explosion?\n",
+      "[start] qué fue el final de la [UNK] [end]\n",
+      "I don't blame you for the accident. It wasn't your fault.\n",
+      "[start] no te he visto de la habitación de que no fue tu [UNK] [end]\n",
+      "Not everything in this world is measured in money.\n",
+      "[start] no todo el mundo es este dinero en el dinero [end]\n",
+      "She asked me to look after her baby in her absence.\n",
+      "[start] le pidió que le dio a su hijo a su hijo [end]\n",
+      "You're quite smart.\n",
+      "[start] estás muy ocupado [end]\n",
+      "The play was so popular that the theater was almost full.\n",
+      "[start] el hombre fue tan ocupado que la única era el hombre [end]\n",
+      "She waited for you for two hours.\n",
+      "[start] ella le ha estado por dos horas [end]\n",
+      "My hair is still damp.\n",
+      "[start] el lunes me ha sido [UNK] [end]\n",
+      "Who's faster, you or Tom?\n",
+      "[start] quién es que te va a tom [end]\n",
+      "Few people can speak a foreign language perfectly.\n",
+      "[start] los personas puede hablar un buen inglés de un poco de un poco de inglés [end]\n",
+      "School begins at half past eight.\n",
+      "[start] la escuela de las escuela se se [UNK] [end]\n",
+      "Follow his example.\n",
+      "[start] [UNK] su crimen [end]\n",
+      "I look forward to watching you dance.\n",
+      "[start] te gustaría que te te gusta [end]\n",
+      "Did you see anyone on the beach?\n",
+      "[start] te has estado a la verdad [end]\n",
+      "I like to travel by myself.\n",
+      "[start] me gusta [UNK] por mí [end]\n",
+      "We don't speak French.\n",
+      "[start] no nos nosotros nos [UNK] [end]\n",
+      "We have equipped our office with computers.\n",
+      "[start] tenemos que nos tenemos de nosotros [end]\n",
+      "I ate fish yesterday.\n",
+      "[start] me [UNK] de ayer [end]\n"
+     ]
+    }
+   ],
    "source": [
     "# decode / evaluate\n",
     "spa_vocab = spa_vectorization.get_vocabulary()\n",
@@ -443,7 +510,9 @@
     "test_eng_texts = [pair[0] for pair in test_pairs]\n",
     "for _ in range(30):\n",
     "    input_sentence = random.choice(test_eng_texts)\n",
-    "    translated = decode_sequence(input_sentence)"
+    "    translated = decode_sequence(input_sentence)\n",
+    "    print(input_sentence)\n",
+    "    print(translated)"
    ]
   }
  ],
