--- a/tensorflow_play/tf_guide/regression.ipynb
+++ b/tensorflow_play/tf_guide/regression.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "c6daf406",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.6.0\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (705249800.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/8p/pknqq5q17clfh88998yvpqw80000gn/T/ipykernel_25194/705249800.py\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    import tensorflow as tf\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -901,13 +902,7 @@
       "8/8 [==============================] - 0s 3ms/step - loss: 3.8037 - val_loss: 4.1938\n",
       "Epoch 83/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 3.8085 - val_loss: 4.2084\n",
-      "Epoch 84/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 3.8035 - val_loss: 4.1923\n",
       "Epoch 85/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 3.8085 - val_loss: 4.1453\n",
@@ -1209,13 +1204,7 @@
       "8/8 [==============================] - 0s 3ms/step - loss: 2.4969 - val_loss: 2.4841\n",
       "Epoch 82/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 2.4963 - val_loss: 2.4676\n",
-      "Epoch 83/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 2.4715 - val_loss: 2.5195\n",
       "Epoch 84/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 2.4740 - val_loss: 2.4576\n",
@@ -1510,13 +1499,7 @@
       "8/8 [==============================] - 0s 3ms/step - loss: 3.2906 - val_loss: 3.7934\n",
       "Epoch 74/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 3.2878 - val_loss: 3.7922\n",
-      "Epoch 75/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 75/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 3.2847 - val_loss: 3.7917\n",
       "Epoch 76/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 3.2839 - val_loss: 3.7962\n",
@@ -1801,13 +1784,7 @@
       "8/8 [==============================] - 0s 3ms/step - loss: 1.7261 - val_loss: 2.2553\n",
       "Epoch 74/100\n",
       "8/8 [==============================] - 0s 5ms/step - loss: 1.7054 - val_loss: 2.2533\n",
-      "Epoch 75/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 75/100\n",
       "8/8 [==============================] - 0s 4ms/step - loss: 1.7127 - val_loss: 2.2133\n",
       "Epoch 76/100\n",
       "8/8 [==============================] - 0s 3ms/step - loss: 1.7003 - val_loss: 2.2489\n",
