--- a/tensorflow_play/audio_tf/simple_audio_recognition.ipynb
+++ b/tensorflow_play/audio_tf/simple_audio_recognition.ipynb
@@ -1,6 +1,77 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d234897b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pathlib\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras import models\n",
+    "from IPython import display\n",
+    "\n",
+    "# Set the seed value for experiment reproducibility.\n",
+    "seed = 42\n",
+    "tf.random.set_seed(seed)\n",
+    "np.random.seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b80b8d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get data\n",
+    "DATASET_PATH = 'data/mini_speech_commands'\n",
+    "\n",
+    "data_dir = pathlib.Path(DATASET_PATH)\n",
+    "if not data_dir.exists():\n",
+    "    tf.keras.utils.get_file(\n",
+    "          'mini_speech_commands.zip',\n",
+    "          origin=\"http://storage.googleapis.com/download.tensorflow.org/data/mini_speech_commands.zip\",\n",
+    "          extract=True,\n",
+    "          cache_dir='.', cache_subdir='data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a96a5637",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.13"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
