object recognition finished, got working on camera as well, live object rec on camera, very slow

--- a/tensorflow_play/audio_tf/simple_audio_recognition.ipynb
+++ b/tensorflow_play/audio_tf/simple_audio_recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d234897b",
    "metadata": {},
    "outputs": [],
@@ -27,10 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b80b8d0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from http://storage.googleapis.com/download.tensorflow.org/data/mini_speech_commands.zip\n",
+      "182082353/182082353 [==============================] - 45s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "# Get data\n",
     "DATASET_PATH = 'data/mini_speech_commands'\n",
