--- a/tensorflow_play/text_tf/image_caption.ipynb
+++ b/tensorflow_play/text_tf/image_caption.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "840ee5e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-07-12 14:38:47.857008: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -33,8 +24,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "31d85d51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from http://images.cocodataset.org/annotations/annotations_trainval2014.zip\n",
+      "252872794/252872794 [==============================] - 54s 0us/step\n",
+      "Downloading data from http://images.cocodataset.org/zips/train2014.zip\n",
+      "13510573713/13510573713 [==============================] - 2749s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download caption annotation files\n",
+    "annotation_folder = '/annotations/'\n",
+    "if not os.path.exists(os.path.abspath('.') + annotation_folder):\n",
+    "    annotation_zip = tf.keras.utils.get_file('captions.zip',\n",
+    "                                           cache_subdir=os.path.abspath('.'),\n",
+    "                                           origin='http://images.cocodataset.org/annotations/annotations_trainval2014.zip',\n",
+    "                                           extract=True)\n",
+    "    annotation_file = os.path.dirname(annotation_zip)+'/annotations/captions_train2014.json'\n",
+    "    os.remove(annotation_zip)\n",
+    "\n",
+    "# Download image files\n",
+    "image_folder = '/train2014/'\n",
+    "if not os.path.exists(os.path.abspath('.') + image_folder):\n",
+    "    image_zip = tf.keras.utils.get_file('train2014.zip',\n",
+    "                                      cache_subdir=os.path.abspath('.'),\n",
+    "                                      origin='http://images.cocodataset.org/zips/train2014.zip',\n",
+    "                                      extract=True)\n",
+    "    PATH = os.path.dirname(image_zip) + image_folder\n",
+    "    os.remove(image_zip)\n",
+    "else:\n",
+    "    PATH = os.path.abspath('.') + image_folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92245859",
    "metadata": {},
    "outputs": [],
    "source": []
